--- a/paper/DAFx20_Templates_LaTeX/DAFx20_tmpl.tex
+++ b/paper/DAFx20_Templates_LaTeX/DAFx20_tmpl.tex
@@ -236,11 +236,52 @@
 
 % code
 \usepackage{listings}
+\lstset
+{
+frame = single,
+}
+% \lstset
+% { %Formatting for code in appendix
+%     % language=Matlab,
+%     % basicstyle=\footnotesize,
+%     numbers=left,
+%     stepnumber=1,
+%     showstringspaces=false,
+%     tabsize=1,
+%     breaklines=true,
+%     breakatwhitespace=false,
+% }
 
 % subfigures (side by side)
 \usepackage{subcaption}
 % \usepackage{subfig}
 
+
+
+
+% =============== BlockDiagram Drawing Config
+\usetikzlibrary{shapes,arrows}
+  \usetikzlibrary{trees, backgrounds}
+
+% Definition of blocks:
+\tikzset{%
+  block/.style    = {draw, thick, rectangle, minimum height = 3em,
+    minimum width = 3em},
+  sum/.style      = {draw, circle, node distance = 2cm}, % Adder
+  input/.style    = {coordinate}, % Input
+  output/.style   = {coordinate}, % Output
+  mult/.style   = {draw, isosceles triangle, minimum height=1cm, minimum width =1cm}
+}
+% mult/.style   = {isosceles triangle, sharp corners, anchor=center, xshift=-4mm, minimum height=1.5cm, minimum width =0.05cm}
+%isosceles triangle, fill=gray!25, minimum width=1.5cm
+
+% Defining string as labels of certain blocks.
+\newcommand{\suma}{\Large$+$}
+\newcommand{\inte}{$\displaystyle \int$}
+\newcommand{\derv}{\huge$\frac{d}{dt}$}
+\newcommand{\conv}{\huge$\ast$}
+
+% ==
 
 % ====================================
 
@@ -288,7 +329,7 @@ Since the distance to the nearest surface is always known, the step size of a ra
 
 \begin{figure}[ht]
 \centerline{\includegraphics[scale=0.5]{img/sphereTracingViz.png}}
-\caption{\label{sphereViz}{\it Visualization of the sphere tracing algorithm in 2D. A ray is sent from the source (left) the right until it hits a surface, always moving the maximum distance as the SDF informs the tracing algorithm about the distance to nearest surface.}}
+\caption{\label{sphereViz}{\it Visualization of the sphere tracing algorithm in 2D. A ray is sent from the source (left) to the right until it hits a surface, always moving the maximum distance as the SDF informs the tracing algorithm about the distance to nearest surface.}}
 \end{figure}
 %
 
@@ -344,16 +385,16 @@ As described above, ray tracing in general is in use. Sphere tracing has a numbe
 
 \begin{figure}[ht]
 \centering
-\begin{subfigure}{0.2\textwidth}
+\begin{subfigure}[t]{0.2\textwidth}
   \centering
   \includegraphics[width=0.9\linewidth]{img/diffusorNorm.png}
-  \caption{\it Normal Shape}
+  \caption{\it Diffusor shape}
   \label{fig:diffNorm}
 \end{subfigure}%
-\begin{subfigure}{0.2\textwidth}
+\begin{subfigure}[t]{0.2\textwidth}
   \centering
   \includegraphics[width=0.9\linewidth]{img/diffusorSmooth.png}
-  \caption{\it After subtraction}
+  \caption{\it After subtraction: rounded and closed.}
   \label{fig:sub2}
 \end{subfigure}
 \caption{\it The diffusor from scene 1 in \cite{brinkmann_round_2019} was reconstructed exactly(a). A subtraction of $0.01$ from the distance function causes the holes to close(b).}
@@ -380,7 +421,7 @@ As described above, ray tracing in general is in use. Sphere tracing has a numbe
 procedural by default
 deforming geometry
 \subsubsection{Implementation}
-It is possible to implement the chosen algorithm on the CPU and the GPU. A number of frameworks could be chosen for GPU accelerated computation such as OpenCL or NVIDIA CUDA. The choice of a shader has the advantage of being more operating system independent and hardware independent. Compute shaders (in contrast to fragment shaders) make it possible to write to arbitrary output locations which is necessary for generating the actual impulse response from the measurement of timings. Since they are available since OpenGL 4.3 (August 2012) / OpenGL ES 3.1 they are both aged enough to have received broad support in other frameworks and relatively new in respect to first publications about sphere tracing. Another reason for the choice of compute shaders is their simplicity. In comparison to CUDA and OpenCL, shaders are easier to write and the GLSL(Graphics Library Shading Language) is more widespread. 
+It is possible to implement the chosen algorithm on the CPU and the GPU. A number of frameworks could be chosen for GPU accelerated computation such as OpenCL or NVIDIA CUDA. The choice of a shader has the advantage of being more operating system independent and hardware independent. Compute shaders (in contrast to fragment shaders) make it possible to write to arbitrary output locations which is necessary for generating the actual impulse response from the measurement of timings. Since they are available since OpenGL 4.3 (August 2012) / OpenGL ES 3.1 they are both aged enough to have received broad support in other frameworks and relatively new in respect to first publications about sphere tracing. Another reason for the choice of compute shaders is their simplicity. In comparison to CUDA and OpenCL, shaders are easier to write and the GLSL(Graphics Library Shading Language) is more widespread. Achieving the whole computation, from the definition of the geometry, to the ray tracing up until the actual impulse response computation in a single shader makes this attempt highly portable and expandable.
 
 
 \section{Generation of SDFs}
@@ -399,7 +440,7 @@ c_0(x) = max(x,0)
 
 which translates to GLSL conveniently:
 
-\begin{lstlisting}[language=C]
+\begin{lstlisting}[language=C, caption={\it GLSL code for creating a box SDF},captionpos=b, label=lst:boxSdf]
 float box(vec3 pos, vec3 R){
     return length(max(abs(pos) - R,0));
 }
@@ -419,48 +460,171 @@ with
 \omega = log_{10}{V_{room}}
 \end{equation}
 where $d_{SR}$ is the source-receiver distance, $N$ is the number of initial rays and $V_{room}$ is the volume of the room.
+The actual sphere tracing follows the original formulation in \cite{hart_sphere_1996}:
+
+\begin{equation}
+t_{i+1} = t_i + F(t_i)
+\end{equation}
+Here, this is implemented in the following way:
+\begin{lstlisting}[language=C, caption={\it GLSL pseudo code for sphere tracing},captionpos=b,label=lst:sphereTrace]
+for (i=0;i++;i<imax){
+  vec3 pos = ro + t*rd;
+  Sdf res = map(pos);
+  t += res.x;
+  if(res.x<epsilon){
+    break
+  }
+}
+\end{lstlisting} 
+
+In the above simplified code listing, \texttt{ro} is a \texttt{vec3} that defines the ray origin, \texttt{rd} the ray direction and \texttt{epsilon} can be set to adjust the algorithms precision. The \texttt{map()} function in this case not only returns the distance computed via the SDF(\texttt{res.x}) but a \texttt{struct} that can contain material properties (reflection coefficients etc.). Here it was used to distinguish between a sound source and a regular reflective body.
+The space is sampled spherically and \texttt{rd} is generated from the compute shader's \texttt{gl\_GlobalInvocationID}.
+From there, the space is sampled using the following very simplified pseudo code:
+\begin{lstlisting}[language=C, caption={\it GLSL pseudo code for sampling the space and writing to the RIR.},captionpos=b, label=lst:mainloop]
+Sdf res = castRay(ro,rd)
+for (int k=0;k<numReflections;k++;){
+  if(ComingFromReflectiveBdy){
+    rd = relect(rd,normal);
+  }
+  res = castRay(ro,rd);
+  t = res.x;
+  pos = ro+rd*t;
+  if(res.body == soundSource){
+    travelDistance+=t;
+    readWrite(travelDistance,k);
+  }
+}
+
+\end{lstlisting}
+
+Here, \texttt{castRay()} refers to a function that looks similar to the sphere tracing function above and \texttt{readWrite()} refers to a function that takes the total distance a ray has travelled from source to receiver including all reflections and the number of reflections. From the distance it computes the location where to write to in the impulse response and the attenuation. It then reads the current value at this location and adds the corresponding value, making use of a compute shader's capability to read and write it's output and write to arbitrary output locations. The necessity to write to arbitrary output locations is the main reason for choosing a compute shader over a fragment shader. But it is possible to define most of the functionality to in one file that is included to a compute shader to calculate the RIR and to a fragment shader for visualization. This is particularly handy during construction of geometry.
+
+
+\begin{figure}[ht]
+\center
+\begin{tikzpicture}
+
+\node (lib) at (0,0) [rectangle,draw] {$F(p_{xyz})$};
+\node (frag) at (-2,-1) [rectangle,draw] {$fragment\ shader$};
+\node (comp) at (2,-1) [rectangle,draw] {$compute\ shader$};
+\draw node [block, below of=frag, node distance = 1.5cm](rend){\includegraphics[width=.1\textwidth]{img/diffusorNorm.png}};
+\draw node [block, below of=comp, node distance = 1.5cm](H){$H(n)$};
+% \node (rend) [rectangle,draw, below=frag] {$compute\ shader$};
+\draw[->] (lib) -- node {} (frag);
+\draw[->] (lib) -- node {} (comp);
+\draw[->] (frag) -- node {}(rend);
+\draw[->] (comp) -- node {}(H);
+
+% \draw[->,thick] (lib) to (comp);
+% \draw[->,thick] (lib) to (comp);
+
+
+\end{tikzpicture}
+\caption{\label{fig:bd_shaders}{\it A lot of the code, especially the map function, $F(p_{xyz})$, which contains the SDF can be shared between a fragment shader used for visualization and a compute shader responsible for RIR calculation.}}
+\end{figure}
 
 
 
+\begin{enumerate}
+\item reflection
+\item low frequency pass
+\end{enumerate}
 
-low frequency pass
 
 \section{Generation of impulse response}
+The room is assumed to a linear time invariant system(LTI). Due to the proof-of-concept nature of this proposal, a highly simplified model for RIR computation is used. Sphere tracing delivers distances and number of reflections for $M$ rays in this implementation. Each ray follows a number of reflections $K(m)$. Each reflection pass adds up to a total travel distance of the ray, $d(m)$. The sound source is assumed to send out a discrete impulse, the kronecker delta function, $\delta(n)$. As non-integer delays are ignored in this implementation, the shader will just write to the rounded integer delay location $\tau_s$ in the impulse response, $H(n)$,that corresponds to the distance:
+\begin{equation}
+H(n) = \sum_{m=0}^M \delta(n-\tau_s(m))\cdot \alpha(m)\cdot -1^{K(m)}
+\end{equation}
+The total attenuation per ray $\alpha(m)$ can be computed by using a material dependent coefficient of reflection $\alpha_{mat}$ that is stored in the \texttt{Sdf struct}. At each reflection pass $k$ this results in a possibly different reflection pass dependent coefficient $\alpha_{mat}(k,m)$ and keeping a running product in the loop of Listing \ref{lst:mainloop}:
+\begin{equation}
+\alpha(m)=\prod_{k=0}^{K(m)} \alpha_{mat}(k,m)
+\end{equation}
+For simplicity's sake, here only one global coefficient $\alpha_G$ is implemented resulting in:
+\begin{equation}
+\alpha(m) = \alpha_G^{K(m)}
+\end{equation}
 
-Advantage of compute shader.
-Maybe introduce cascaded Lowpass.
+Additionally, a proof-of-concept for frequency dependent loss for each reflection is introduced into the model. As a computationally efficient heuristic, a simple one-zero filter $G(z)$ is applied at each reflection:
+
+\begin{equation}
+G(z,K) = (1+z^{-1})^K \cdot \frac{1}{2}^K
+\end{equation}
+The advantage of using such a simple filter is that a $K$-stage cascade's impulse response can be computed easily without applying the filter repeatedly. By doing the discrete time inverse fourier transform of the transfer function $Gz$ the $N$-length impulse response is obtained:
+
+\begin{equation}
+  G(n,K) = \mathfrak{F}^{-1}\{ G(z) \} = (\frac{1}{2})^K \frac{1}{N}  \sum_{\omega = 0}^\pi (1+e^{-j\omega})^{K} e^{j\omega n} 
+\end{equation}
+
+Numerically, it can easily be shown that
+
+\begin{equation}
+G(n,K) \approx  \frac{1}{\sigma \cdot \sqrt{2 \pi}} \cdot e ^{-\frac{1}{2} (\frac{n-\mu}{\sigma})^2}
+\label{eq:assump}
+\end{equation}
+
+
+with 
+
+\begin{equation}
+\sigma \approx \sqrt{K 0.231 + 0.562}
+\end{equation}
+
+\begin{equation}
+\mu \approx \frac{K}{2} + \frac{1}{2}
+\end{equation}
+
+The right hand side of Equation \ref{eq:assump} is simply the normal distribution, which is computationally efficient to calculate for any $K$.
+
+So instead of adding $\delta(n-\tau(m))$ into the IR, simply $G(n-\tau(m),K)$ is used. Similar to many other implementations, a high-pass filter is applied to the resulting RIR.
 
 
 
-All figures should be centred on the column (or page, if the figure spans both columns).
-Figure captions (in italic) should follow each figure and have the format given in Figure \ref{fft_plot}.
-%
-Vectorial figures are preferred. For example when using
-\texttt{Matlab}, export using either Postscript or PDF format. Also,
-in order to provide a better readability, figure text font size
-should be at least identical to footnote font size. To do so using
-\texttt{Matlab}, use the \texttt{subplot} command before plotting.
-If bitmap figures are used, please make sure that the resolution is
-enough for print quality. Fig. \ref{ftt_plot2} illustrates an
-example of a figure spanning two columns.
+
+\begin{figure}
+    \begin{center}
+      \input{img/normDist}
+        % \input{img/mytikz.tex}
+    \end{center}
+    \caption{A PGF histogram from \texttt{matplotlib}.}
+\end{figure}
+
+
+% Advantage of compute shader.
+% Maybe introduce cascaded Lowpass.
+
+
+
+% All figures should be centred on the column (or page, if the figure spans both columns).
+% Figure captions (in italic) should follow each figure and have the format given in Figure \ref{fft_plot}.
+% %
+% Vectorial figures are preferred. For example when using
+% \texttt{Matlab}, export using either Postscript or PDF format. Also,
+% in order to provide a better readability, figure text font size
+% should be at least identical to footnote font size. To do so using
+% \texttt{Matlab}, use the \texttt{subplot} command before plotting.
+% If bitmap figures are used, please make sure that the resolution is
+% enough for print quality. Fig. \ref{ftt_plot2} illustrates an
+% example of a figure spanning two columns.
 %
 
 \section{Results}
+\begin{enumerate}
+\item compare to \cite{brinkmann_round_2019}
+\item compare to \cite{campbell_roomsim_nodate}
+\end{enumerate}
 
-compare to \cite{brinkmann_round_2019}
-compare to \cite{campbell_roomsim_nodate}
-compare to ROOMSIM
 
-\begin{figure}[ht]
-\centerline{\includegraphics[scale=0.8]{fft_plot2}}
-\caption{\label{fft_plot}{\it Sinusoid in time and frequency domain. Short captions are centred, long captions (more than 1 line) are justified.}}
-\end{figure}
-%
-\begin{figure*}[ht]
-\center
-\includegraphics[width=5in]{TwoColumnSine2}
-\caption{\label{ftt_plot2}{\it A figure spanning two columns, as mentioned in Sec. . }}
-\end{figure*}
+% \begin{figure}[ht]
+% \centerline{\includegraphics[scale=0.8]{fft_plot2}}
+% \caption{\label{fft_plot}{\it Sinusoid in time and frequency domain. Short captions are centred, long captions (more than 1 line) are justified.}}
+% \end{figure}
+% %
+% \begin{figure*}[ht]
+% \center
+% \includegraphics[width=5in]{TwoColumnSine2}
+% \caption{\label{ftt_plot2}{\it A figure spanning two columns, as mentioned in Sec. . }}
+% \end{figure*}
 
 
 % \begin{figure}[ht]
@@ -479,66 +643,66 @@ compare to ROOMSIM
 
 
 
-\subsection{Tables}
-As for figures, all tables should be centered on the column (or page, if the table spans both columns).
-Table captions should be in italic, precede each table and have the format given in Table \ref{tab:example}.
+% \subsection{Tables}
+% As for figures, all tables should be centered on the column (or page, if the table spans both columns).
+% Table captions should be in italic, precede each table and have the format given in Table \ref{tab:example}.
 
-\begin{table}[ht]
-  \caption{\itshape Basic trigonometric values.}
-	\centering
-	\begin{tabular}{|c|c|}
-		\hline
-		$\mathrm{angle}\,(\theta, \mathrm{rad})$ & $\sin \theta$ \\\hline
-		$\frac{\pi}{2}$ & $1$ \\
-		$\pi$ & $0$ \\
-		$\frac{3\pi}{2}$ & $-1$ \\
-		$2\pi$ & $0$ \\\hline
-	\end{tabular}
-	%
-	\label{tab:example}
-\end{table}
+% \begin{table}[ht]
+%   \caption{\itshape Basic trigonometric values.}
+% 	\centering
+% 	\begin{tabular}{|c|c|}
+% 		\hline
+% 		$\mathrm{angle}\,(\theta, \mathrm{rad})$ & $\sin \theta$ \\\hline
+% 		$\frac{\pi}{2}$ & $1$ \\
+% 		$\pi$ & $0$ \\
+% 		$\frac{3\pi}{2}$ & $-1$ \\
+% 		$2\pi$ & $0$ \\\hline
+% 	\end{tabular}
+% 	%
+% 	\label{tab:example}
+% \end{table}
 
-\begin{table*}[ht]
-  \caption{{\it Basic trigonometric values, spanning two columns.}}
-	\centering
-  \begin{tabular}{|c|c|c|c|c|c|c|}\hline
-    $\mathrm{angle}\, (\theta, \mathrm{rad})$ & $\sin \theta$ & $\cos \theta $ & $(\sin \theta)/2 $ & $(\cos \theta) /2 $ & $(\sin \theta)/3 $ & $(\cos \theta)/3$    \\\hline
-    $\frac{\pi}{2}$ & $1$ & $0$ & $1/2$ & $0$ & $1/3$ & $0$ \\
-    $\pi$ & $0$ & $-1$ & $0$ & $-1/2$ & $0$ & $-1/3$\\
-    $\frac{3\pi}{2}$ & $-1$ & $0$ & $-1/2$ & $0$ & $-1/3$ & $0$ \\
-    $2\pi$ & $0$ & $1$ & $0$ & $1/2$ & $0$ & $1/3$ \\\hline
- \end{tabular}
-	%
-  \label{tab:example2}
-\end{table*}
+% \begin{table*}[ht]
+%   \caption{{\it Basic trigonometric values, spanning two columns.}}
+% 	\centering
+%   \begin{tabular}{|c|c|c|c|c|c|c|}\hline
+%     $\mathrm{angle}\, (\theta, \mathrm{rad})$ & $\sin \theta$ & $\cos \theta $ & $(\sin \theta)/2 $ & $(\cos \theta) /2 $ & $(\sin \theta)/3 $ & $(\cos \theta)/3$    \\\hline
+%     $\frac{\pi}{2}$ & $1$ & $0$ & $1/2$ & $0$ & $1/3$ & $0$ \\
+%     $\pi$ & $0$ & $-1$ & $0$ & $-1/2$ & $0$ & $-1/3$\\
+%     $\frac{3\pi}{2}$ & $-1$ & $0$ & $-1/2$ & $0$ & $-1/3$ & $0$ \\
+%     $2\pi$ & $0$ & $1$ & $0$ & $1/2$ & $0$ & $1/3$ \\\hline
+%  \end{tabular}
+% 	%
+%   \label{tab:example2}
+% \end{table*}
 
-\subsection{Equations}
-Equations should be placed on separate lines and numbered:
+% \subsection{Equations}
+% Equations should be placed on separate lines and numbered:
 
-\begin{equation}
-	X(e^{j\Omega})=\sum_{n=0}^{N-1}x(n)e^{-j\Omega n}
-	\label{eq1}
-	\end{equation}
-	where the sequence $x(n)$ in equation (\ref{eq1}) is a windowed frame:
-	\begin{equation}
-	x(n)=s(n) w(n)
-	\label{eq2}
-\end{equation}
-%
-with a window function $w(n)$.
-
-
-\subsection{Page Numbers}
-Page numbers will be added to the document in the postprocessing stage, so {\em please leave the numbering as is},
-that is, the first page will start at page DAFX-1 and the last page, at most, will have to be DAFX-8.
+% \begin{equation}
+% 	X(e^{j\Omega})=\sum_{n=0}^{N-1}x(n)e^{-j\Omega n}
+% 	\label{eq1}
+% 	\end{equation}
+% 	where the sequence $x(n)$ in equation (\ref{eq1}) is a windowed frame:
+% 	\begin{equation}
+% 	x(n)=s(n) w(n)
+% 	\label{eq2}
+% \end{equation}
+% %
+% with a window function $w(n)$.
 
 
-\subsection{References}
-% The references will be numbered in order of appearance \cite{Mitra:Kaiser:1993:DSP:handbook}, \cite{Haykin:1991:adaptive:filter}, \cite{Moorer:2000:AES:audio:millenium} and \cite{Nackaerts:2001:ICMC}. Please avoid listing references that do not appear in the text (we did the opposite in this template).
+% \subsection{Page Numbers}
+% Page numbers will be added to the document in the postprocessing stage, so {\em please leave the numbering as is},
+% that is, the first page will start at page DAFX-1 and the last page, at most, will have to be DAFX-8.
 
 
-\subsubsection{Reference Format}
-The reference format is the standard IEEE one. We recommend to use BibTeX to create the reference list.
+% \subsection{References}
+% % The references will be numbered in order of appearance \cite{Mitra:Kaiser:1993:DSP:handbook}, \cite{Haykin:1991:adaptive:filter}, \cite{Moorer:2000:AES:audio:millenium} and \cite{Nackaerts:2001:ICMC}. Please avoid listing references that do not appear in the text (we did the opposite in this template).
+
+
+% \subsubsection{Reference Format}
+% The reference format is the standard IEEE one. We recommend to use BibTeX to create the reference list.
 
 
 \section{Conclusions}
@@ -558,40 +722,40 @@ Many thanks to the great number of anonymous reviewers!
 \bibliography{RaymarchReverb2}
 
 
-\section{Appendix: Margin Check}
-This section shows the column margins for the text. \bigskip\newline
+% \section{Appendix: Margin Check}
+% This section shows the column margins for the text. \bigskip\newline
 
-Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-
-Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-
-Ut visi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-
-Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-
-Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.
-
-At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
-
-Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-
-Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+% Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 
-Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+% Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 
-Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+% Ut visi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
 
-Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+% Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
 
-Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.
+% Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.
 
-At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
+% At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
 
-Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
+% Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 
-Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+% Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+
+% Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+
+% Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+
+% Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+
+% Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.
+
+% At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
+
+% Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
+
+% Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 %%Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 
